# starting-ragchatbot-codebase

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  run.sh
backend/: ai_generator.py  app.py  config.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_code_quality.py  test_config.py  test_course_outline.py  test_document_processing.py  test_live_api.py  test_search_sources.py  test_theme_toggle.py  test_vector_search.py
frontend/: index.html  script.js  style.css
scripts/: format.sh
