[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "black>=23.12.0",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.1.11",
]

[tool.black]
line-length = 88
target-version = ["py313"]
# Only extend-exclude beyond black's built-in defaults (.git, .venv, etc.)
extend-exclude = 'chroma_db'

[tool.ruff.lint]
# target-version is inferred from [project].requires-python; line-length defaults to 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
addopts = "-m 'not live'"
markers = [
    "live: tests that hit the real Anthropic API (require ANTHROPIC_API_KEY; deselected by default)",
    "slow: slow tests",
    "api: tests that exercise HTTP endpoints via TestClient",
]
